crates/oxc_react_compiler/tests/snapshots/repro-missing-dependency-if-within-while.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-missing-dependency-if-within-while.js
---
import { c as _c } from "react/compiler-runtime";
const someGlobal = true;
export default function Component(props) {
	const $ = _c(2);
	const { b } = props;
	let t0;
	if ($[0] !== b) {
		const items = [];
		let i = 0;
		while (i < 10) {
			if (someGlobal) {
				items.push(<div key={i}>{b}</div>);
				i++;
			}
		}
		t0 = <>{items}</>;
		$[0] = b;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ b: 42 }],
	sequentialRenders: [
		{ b: 0 },
		{ b: 0 },
		{ b: 42 },
		{ b: 42 },
		{ b: 0 },
		{ b: 42 },
		{ b: 0 },
		{ b: 42 }
	]
};
