crates/oxc_react_compiler/tests/snapshots/repro-mutable-range-extending-into-ternary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-mutable-range-extending-into-ternary.js
---
import { useState } from "react";
function Component(props) {
	const items = props.items ? props.items.slice() : [];
	const [state] = useState("");
	return props.cond ? <div>{state}</div> : <div>{items.map(_temp)}</div>;
}
function _temp(item) {
	return <div key={item.id}>{item.name}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		cond: false,
		items: [{
			id: 0,
			name: "Alice"
		}]
	}],
	sequentialRenders: [
		{
			cond: false,
			items: [{
				id: 0,
				name: "Alice"
			}]
		},
		{
			cond: false,
			items: [{
				id: 0,
				name: "Alice"
			}, {
				id: 1,
				name: "Bob"
			}]
		},
		{
			cond: true,
			items: [{
				id: 0,
				name: "Alice"
			}, {
				id: 1,
				name: "Bob"
			}]
		},
		{
			cond: false,
			items: [{
				id: 1,
				name: "Bob"
			}, {
				id: 2,
				name: "Claire"
			}]
		}
	]
};
