crates/oxc_react_compiler/tests/snapshots/repro-no-declarations-in-reactive-scope-with-early-return.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-no-declarations-in-reactive-scope-with-early-return.js
---
import { c as _c } from "react/compiler-runtime";
// @enableAssumeHooksFollowRulesOfReact @enableTransitivelyFreezeFunctionExpressions @enablePreserveExistingMemoizationGuarantees:false @validateExhaustiveMemoizationDependencies:false
function Component() {
	const $ = _c(6);
	const items = useItems();
	let t0;
	let t1;
	if ($[0] !== items) {
		t1 = Symbol.for("react.early_return_sentinel");
		bb0: {
			const filteredItems = items.filter(_temp);
			if (filteredItems.length === 0) {
				let t2;
				if ($[3] === Symbol.for("react.memo_cache_sentinel")) {
					t2 = <div><span /></div>;
					$[3] = t2;
				} else {
					t2 = $[3];
				}
				t1 = t2;
				break bb0;
			}
			t0 = filteredItems.map(_temp2);
		}
		$[0] = items;
		$[1] = t0;
		$[2] = t1;
	} else {
		t0 = $[1];
		t1 = $[2];
	}
	if (t1 !== Symbol.for("react.early_return_sentinel")) {
		return t1;
	}
	let t2;
	if ($[4] !== t0) {
		t2 = <>{t0}</>;
		$[4] = t0;
		$[5] = t2;
	} else {
		t2 = $[5];
	}
	return t2;
}
function _temp2(t0) {
	const [item_0] = t0;
	return <Stringify item={item_0} />;
}
function _temp(t0) {
	const [item] = t0;
	return item.name != null;
}
